# Plexus

./: .gitignore  Plexus_Main.py  README.md  SLIME_PORT_TASK.md  _quarto.yml  abstraction.html  abstraction.qmd  building.qmd  experiment.html  experiment.qmd  index.qmd  inverse.qmd  library.qmd  library_fields.qmd  library_operators.qmd  library_sets.qmd  methodology.qmd  pyproject.toml
VLLM/: describe_video.py  download_gemma.py  generate_video.py
docs/: abstraction.html  building.html  experiment.html  index.html  inverse.html  library.html  library_fields.html  library_operators.html  library_sets.html  methodology.html  robots.txt  search.json  sitemap.xml  tissue_graph.md  tissue_graph.tex  tissue_graph.toc
paper/: .nfs9cb5ed6af2a2f7ba000000f4  cardio_mpm.tex  fig_hier.tex  fig_ops.tex  plexus.md  plexus.tex
prototype/: METHODOLOGY.md  SCENARIO_BIBLE.md  WINNERS.md  WINNERS_race_maze_hard.md  WINNERS_race_pillars.md  archive.py  divide_cell.py  engine.py  engine2.py  ffmpeg2pass-0.log.mbtree  forage_loop.py  gen_mp4.py  grid_field.py  grow_engine.py  grow_engine_mpm.py  maze_gen.py  mpm.py  nohup.out  notes.md  ops_grow.py  opt_maze.py  opt_pillars.py  optimize.py  overnight_suite.py  panel_winners.py  race_opt.py  render_ants.py  render_ball.py  render_bounce.py  render_core.py  render_forage.py  render_row.py  render_scene.py  render_sims.py  render_water.py  reproduce.py  run.py  run2.py  run_demos.py  scenario.yaml  (+8 more)
scripts/: build_library.py  make_delay_maps.py  make_direction_maps.py  make_gallery.py  make_material_maps.py  make_op_icons.py
(+898 files in other folders)
